# mlflow-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml
src/: client.rs  config.rs  err.rs  lib.rs
tests/: integration_test.rs
