[package]
name = "mlflow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.7"
log = "0.4.22"

[dev-dependencies]
rstest = "0.23.0"
testcontainers = { version = "=0.23.1", features = ["blocking"] }
rand = "0.8.5"